Hooked up to pubs-portal-api. Need to have repo on local machine and running on port 3001. Can change this in development.rb.
Supports signing in and out. Also need links to models folder of api and schema of api. And database.yml should be identical (maybe also link).

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<% if flash[:error] %>
+	<p> <%= flash[:error] %> </p>
+<% end %>
+<% if flash[:success] %>
+	<p> <%= flash[:success] %> </p>
+<% end %>
+
 <%= yield %>
 
 </body>
