--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<% if signed_in? %>
+	<%= link_to "Users List", users_path %>
+	<%= link_to "Sign Out", sign_out_path, :method => :delete %>
+<% else %>
+	<%= link_to "Sign In", sign_in_path %>
+<% end %> 
+
 <% if flash[:error] %>
 	<p> <%= flash[:error] %> </p>
 <% end %>
