--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,7 +9,7 @@
 	<tbody>
 		<% @users.each do |user| %>
 			<tr>
-				<td><%= user["first_name"] %></td>
+				<td><%= link_to user["first_name"], user_path(user["id"]) %></td>
 				<td><%= user["last_name"] %></td>
 				<td><%= user["email"] %></td>
 			</tr>
