Connected roles and tested out basic authorization. Also added add user page. Made script to copy models folder and schema.rb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,10 @@
 <body>
 
 <% if signed_in? %>
-	<%= link_to "Users List", users_path %>
+	<%= link_to "Home", root_path %>
+	<% if can? :read, User %>
+		<%= link_to "Users List", users_path %>
+	<% end %>
 	<%= link_to "Sign Out", sign_out_path, :method => :delete %>
 <% else %>
 	<%= link_to "Sign In", sign_in_path %>
