--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 	<% if can? :read, User %>
 		<%= link_to "Users List", users_path %>
 	<% end %>
+	<%= link_to "View Profile", user_path(current_user) %>
 	<%= link_to "Sign Out", sign_out_path, :method => :delete %>
 <% else %>
 	<%= link_to "Sign In", sign_in_path %>
