--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 	<%= link_to "View Profile", user_path(current_user) %>
 	<%= link_to "Sign Out", sign_out_path, :method => :delete %>
 <% else %>
-	<%= link_to "Sign In", sign_in_path %>
+	<%= link_to "Sign In", sign_in_path, id: "sign-in" %>
 <% end %> 
 
 <% if flash[:error] %>
