--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Publishing Portal</h1>
 
 <% if signed_in? %> 
-	<h2> Welcome <%= current_user.first_name %> <%= current_user.last_name %></h2>
+	<h2 id="welcome-header"> Welcome <%= current_user.first_name %> <%= current_user.last_name %></h2>
 <% end %>
