--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,12 @@
 			</div>
 		<% end %>
 		<% if flash[:success] %>
-			<p> <%= flash[:success] %> </p>
+			<div class="alert alert-success alert-dismissible" role="alert">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<%= flash[:success] %>
+			</div>
 		<% end %>
 
 		<%= yield %>
