Refactored users#create to use user_params as well as added selenium tests for user create

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <% if can? :create, User %>
-	<%= link_to "Add User", new_user_path %>
+	<%= link_to "Add User", new_user_path, id: 'add-user' %>
 <% end %>
 
 <h1>JoyPact Users</h1>
