--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,6 @@
     </div>
 
     <div class="actions">
-      <%= submit_tag "Add User", class: "btn btn-primary btn-lg btn-block" %>
+      <%= submit_tag "Add User", id: "add-user-btn", class: "btn btn-primary btn-lg btn-block" %>
     </div>
 <% end %>
