--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,6 +8,8 @@
 			<%= render partial: 'sessions/new' %>
 		</div>
 	<% else %>
-		<h2 id="welcome-header"> Welcome <%= current_user.first_name %> <%= current_user.last_name %></h2>
+		<h2 id="welcome-header" class="col-md-4 col-xs-8"> Welcome <%= current_user.first_name %> <%= current_user.last_name %></h2>
+
+		
 	<% end %>
 </div>
