--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,8 +21,8 @@
 
 	<div class="row wall" id="templates-wall">
 		<% @templates.each do |template| %>
-			<div class="item">
-				<%= image_tag(template['image_medium'], class: "img-thumbnail") %>
+			<div class="template-cell">
+				<%= link_to(image_tag(template['image_medium'], class: "img-thumbnail"), new_publication_request_path(:template_id => template['id'])) %>
 			</div>
 		<% end %>
 	</div>
@@ -31,7 +31,7 @@
 		$(function() {
 			var wall = new freewall("#templates-wall");
 			wall.reset({
-				selector: '.item',
+				selector: '.template-cell',
 				animate: true,
 				cellW: 20,
 				cellH: 200,
