--- a/app/views/publication_requests/new.html.erb
+++ b/app/views/publication_requests/new.html.erb
@@ -1,41 +1,55 @@
 <h1>New Publication Request</h1>
 
 <div class="row">
-	<div class="col-md-offset-2 col-xs-offset-2 col-md-8 col-xs-8">
+	<div class="col-md-4 col-xs-4" id="chosen-template">
+		<strong>Template for this Request</strong>
+		<%= image_tag(@publication_request.templates.first.image.url(:large), class: "img-thumbnail") %>
+	</div>
+	<div class="col-md-8 col-xs-8">
 		<%= form_for(@publication_request) do |f| %>
-			<%= image_tag(@publication_request.templates.first.image.url(:large), class: "img-thumbnail") %>
-
-			<div class="field form-group">
-			    <%= f.label :event, "Event", class: "sr-only" %>
-			    <%= f.text_field :event, autofocus: true, class: "form-control input-lg", placeholder: "Event" %>
+			<div class="row">
+				<div class="field form-group col-md-6 col-xs-12">
+				    <%= f.label :event, "Event", class: "sr-only" %>
+				    <%= f.text_field :event, autofocus: true, class: "form-control input-lg", placeholder: "Event" %>
+				</div>
+				<div class="field form-group col-md-6 col-xs-12">
+				    <%= f.label :event_date, "Date of the event this is for" %> </br>
+				    <%= f.date_select :event_date, :order => [:day, :month, :year], class: "form-control input-lg" %>
+				</div>
 			</div>
 
-			<div class="field form-group">
-			    <%= f.label :description, "Description", class: "sr-only" %>
-			    <%= f.text_area :description, class: "form-control input-lg", placeholder: "Description of what you are requesting" %>
+			<div class="row">
+				<div class="field form-group col-md-8 col-xs-12">
+				    <%= f.label :description, "Description", class: "sr-only" %>
+				    <%= f.text_area :description, class: "form-control input-lg", placeholder: "Description of what you are requesting" %>
+				</div>
 			</div>
 
-			<div class="field form-group">
-			    <%= f.label :dimensions, "Dimensions", class: "sr-only" %>
-			    <%= f.text_field :dimensions, class: "form-control input-lg", placeholder: "Dimensions e.g. (3x2)" %>
+			<div class="row">
+				<div class="field form-group col-md-4 col-xs-12">
+				    <%= f.label :dimensions, "Dimensions", class: "sr-only" %>
+				    <%= f.text_field :dimensions, class: "form-control input-lg", placeholder: "Dimensions e.g. (3x2)" %>
+				</div>
 			</div>
 
-			<div class="field form-group">
-			    <%= f.label :rough_date, "Date the rough draft is due" %> </br>
-			    <%= f.date_select :rough_date, :order => [:day, :month, :year], class: "form-control input-lg" %>
+			<div class="row">
+				<div class="field form-group col-md-4 col-xs-12">
+				    <%= f.label :rough_date, "Date the rough draft is due" %> </br>
+				    <%= f.date_select :rough_date, :order => [:day, :month, :year], class: "form-control input-lg" %>
+				</div>
+
+				<div class="field form-group col-md-4 col-xs-12">
+				    <%= f.label :due_date, "Date the request is due" %> </br>
+				    <%= f.date_select :due_date, :order => [:day, :month, :year], class: "form-control input-lg" %>
+				</div>
 			</div>
 
-			<div class="field form-group">
-			    <%= f.label :due_date, "Date the request is due" %> </br>
-			    <%= f.date_select :due_date, :order => [:day, :month, :year], class: "form-control input-lg" %>
+			
+			<div class="row">
+				<div class="col-md-offset-4 col-xs-offset-2 col-md-4 col-xs-8">
+					<%= f.submit("Submit", id: "submit-btn", class: "btn btn-primary btn-lg btn-block") %>
+				</div>
 			</div>
-
-			<div class="field form-group">
-			    <%= f.label :event_date, "Date of the event this is for" %> </br>
-			    <%= f.date_select :event_date, :order => [:day, :month, :year], class: "form-control input-lg" %>
-			</div>
-
-			<%= submit_tag("Submit", id: "submit-btn", class: "btn btn-primary btn-lg btn-block") %>
 		<% end %>
 	</div>
 </div>
