--- a/app/views/publication_requests/new.html.erb
+++ b/app/views/publication_requests/new.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
 	<div class="col-md-4 col-xs-4" id="chosen-template">
 		<strong>Template for this Request</strong>
-		<%= image_tag(@publication_request.templates.first.image.url(:large), class: "img-thumbnail") %>
+		<%= image_tag(@template["image_large"], class: "img-thumbnail") %>
 	</div>
 	<div class="col-md-8 col-xs-8">
 		<%= form_for(@publication_request) do |f| %>
