--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,7 +28,7 @@
 	</div>
 
 	<script>
-		$(function() {
+		$(document).ready(function() {
 			var wall = new freewall("#templates-wall");
 			wall.reset({
 				selector: '.template-cell',
