Improved error messages for failed template upload. Fields will be highlighted. Still needs some improvement

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,13 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+$red: #C9302C;
+
 .wall {
 	margin: 15px;
+}
+
+.form-required {
+	color: $red;
+	display: inline-block;
 }
