--- a/app/views/templates/new.html.erb
+++ b/app/views/templates/new.html.erb
@@ -1,29 +1,30 @@
 
 <div class="row">
 	<div class="col-md-offset-4 col-xs-offset-2 col-md-4 col-xs-8">
+		<h1>Upload a Template</h1>
 		<%= form_for(@template, multipart: true) do |f|%>
-			<div class="field form-group">
-			    <%= f.label :name, "Name", class: "sr-only" %>
+			<div class="field form-group <%=field_class(@template, :name) %>">
+			    <%= f.label :name, "Name of the template", class: "control-label" %> <div class="form-required">*</div> </br>
 			    <%= f.text_field :name, autofocus: true, class: "form-control input-lg", placeholder: "Name" %>
 			</div>
 
-			<div class="field form-group">
-			    <%= f.label :dimensions, "Dimensions", class: "sr-only" %>
-			    <%= f.text_field :dimensions, class: "form-control input-lg", placeholder: "Diemnsions (e.g. 2x3)" %>
+			<div class="field form-group <%=field_class(@template, :dimensions) %>">
+			    <%= f.label :dimensions, "Dimensions of the template", class: "control-label" %> <div class="form-required">*</div> </br>
+			    <%= f.text_field :dimensions, class: "form-control input-lg", placeholder: "e.g. 3x2" %>
 			</div>
 
-			<div class="field form-group">
-			    <%= f.label :link, "Link", class: "sr-only" %>
-			    <%= f.text_field :link, class: "form-control input-lg", placeholder: "Url to assets for this template" %>
+			<div class="field form-group <%=field_class(@template, :link) %>">
+			    <%= f.label :link, "URL to assets for this template", class: "control-label" %>
+			    <%= f.text_field :link, class: "form-control input-lg", placeholder: "e.g. Dropbox link" %>
 			</div>
 
-			<div class="field form-group">
-			    <%= f.label :category, "Category", class: "sr-only" %>
-			    <%= f.text_field :category, class: "form-control input-lg", placeholder: "Category of template (e.g. Welcome Night)" %>
+			<div class="field form-group <%=field_class(@template, :category) %>">
+			    <%= f.label :category, "Category of the template", class: "control-label" %>
+			    <%= f.text_field :category, class: "form-control input-lg", placeholder: "e.g. Welcome Night" %>
 			</div>
 
-			<div class="field form-group">
-			    <%= f.label :name, "Name", class: "sr-only" %>
+			<div class="field form-group <%=field_class(@template, :image) %>">
+			    <%= f.label :image, "Image to upload", class: "control-label" %> <div class="form-required">*</div></br>
 			    <%= f.file_field :image %>
 			</div>
 
