--- a/app/views/layouts/_form_errors.html.erb
+++ b/app/views/layouts/_form_errors.html.erb
@@ -1,14 +1,16 @@
-<div class="alert alert-danger alert-dismissible" role="alert">
-	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-					<span aria-hidden="true">&times;</span>
-				</button>
-	<p>
-		<%= pluralize(object.errors.count, "error") %> prevented the form from being saved:
-	</p>
+<% if object.errors.any? %>
+	<div class="alert alert-danger alert-dismissible" role="alert">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+		<p>
+			<%= pluralize(object.errors.count, "error") %> prevented the form from being saved:
+		</p>
 
-	<ul>
-		<% object.errors.full_messages.each do |message| %>
-	  		<li><%= message %></li>
-		<% end %>
-	</ul>
-</div>
+		<ul>
+			<% object.errors.full_messages.each do |message| %>
+		  		<li><%= message %></li>
+			<% end %>
+		</ul>
+	</div>
+<% end %>
