Small styling fixes

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,6 +19,12 @@
 		</div>
 	</div>
 
+	<div class="row">
+		<div class="col-md-12">
+			<h3>Choose a template to base your publication request on</h3>
+		</div>
+	</div>
+
 	<div class="row wall" id="templates-wall">
 		<% @templates.each do |template| %>
 			<div class="template-cell">
