--- a/app/views/publication_requests/new.html.erb
+++ b/app/views/publication_requests/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New Publication Request</h1>
+<div class="page-header">
+	<h1>New Publication Request</h1>
+</div>
 
 <div class="row">
 	<div class="col-md-4 col-xs-4" id="chosen-template">
@@ -9,12 +11,12 @@
 		<%= form_for(@publication_request) do |f| %>
 			<div class="row">
 				<div class="field form-group col-md-6 col-xs-12">
-				    <%= f.label :event, "Event", class: "sr-only" %>
+				    <%= f.label :event, "Name of the event" %>
 				    <%= f.text_field :event, autofocus: true, class: "form-control input-lg", placeholder: "Event" %>
 				</div>
-				<div class="field form-group col-md-6 col-xs-12">
+				<div class="field form-group col-md-6 col-xs-12 form-inline">
 				    <%= f.label :event_date, "Date of the event this is for" %> </br>
-				    <%= f.date_select :event_date, :order => [:day, :month, :year], class: "form-control input-lg" %>
+				    <%= f.date_select :event_date, { :order => [:day, :month, :year] }, { class: "form-control" } %>
 				</div>
 			</div>
 
@@ -33,14 +35,14 @@
 			</div>
 
 			<div class="row">
-				<div class="field form-group col-md-4 col-xs-12">
+				<div class="field form-group col-md-4 col-xs-12 form-inline">
 				    <%= f.label :rough_date, "Date the rough draft is due" %> </br>
-				    <%= f.date_select :rough_date, :order => [:day, :month, :year], class: "form-control input-lg" %>
+				    <%= f.date_select :rough_date, { :order => [:day, :month, :year] }, { class: "form-control" } %>
 				</div>
 
-				<div class="field form-group col-md-4 col-xs-12">
+				<div class="field form-group col-md-4 col-xs-12 form-inline">
 				    <%= f.label :due_date, "Date the request is due" %> </br>
-				    <%= f.date_select :due_date, :order => [:day, :month, :year], class: "form-control input-lg" %>
+				    <%= f.date_select :due_date, { :order => [:day, :month, :year] }, { class: "form-control" } %>
 				</div>
 			</div>
 
