--- a/app/views/publication_requests/new.html.erb
+++ b/app/views/publication_requests/new.html.erb
@@ -13,8 +13,8 @@
 			<div class="row">
 				<%= f.hidden_field :template_id, :value => @template["id"] %>
 
-				<div class="field form-group col-md-6 col-xs-12">
-				    <%= f.label :event, "Name of the event" %>
+				<div class="field form-group col-md-6 col-xs-12 <%=field_class(@publication_request, :event) %>">
+				    <%= f.label :event, "Name of the event", class: "control-label" %>
 				    <%= f.text_field :event, autofocus: true, class: "form-control input-lg", placeholder: "Event" %>
 				</div>
 				<div class="field form-group col-md-6 col-xs-12 form-inline">
@@ -24,15 +24,15 @@
 			</div>
 
 			<div class="row">
-				<div class="field form-group col-md-8 col-xs-12">
-				    <%= f.label :description, "Description", class: "sr-only" %>
+				<div class="field form-group col-md-8 col-xs-12 <%=field_class(@publication_request, :description) %>">
+				    <%= f.label :description, "Description", class: "sr-only control-label" %>
 				    <%= f.text_area :description, class: "form-control input-lg", placeholder: "Description of what you are requesting", rows: "4" %>
 				</div>
 			</div>
 
 			<div class="row">
-				<div class="field form-group col-md-6 col-xs-12">
-				    <%= f.label :dimensions, "Dimensions", class: "sr-only" %>
+				<div class="field form-group col-md-6 col-xs-12 <%=field_class(@publication_request, :event) %>">
+				    <%= f.label :dimensions, "Dimensions", class: "sr-only control-label" %>
 				    <%= f.text_field :dimensions, class: "form-control input-lg", placeholder: "Dimensions e.g. (3x2)" %>
 				</div>
 			</div>
@@ -67,7 +67,7 @@
 			</div>
 			
 			<div class="row">
-				<div class="col-md-offset-4 col-xs-offset-2 col-md-4 col-xs-8">
+				<div class="col-md-offset-3 col-xs-offset-2 col-md-6 col-xs-8">
 					<%= f.submit("Submit", id: "submit-btn", class: "btn btn-primary btn-lg btn-block") %>
 				</div>
 			</div>
