Error class for dimensions was using event

--- a/app/views/publication_requests/new.html.erb
+++ b/app/views/publication_requests/new.html.erb
@@ -31,7 +31,7 @@
 			</div>
 
 			<div class="row">
-				<div class="field form-group col-md-6 col-xs-12 <%=field_class(@publication_request, :event) %>">
+				<div class="field form-group col-md-6 col-xs-12 <%=field_class(@publication_request, :dimensions) %>">
 				    <%= f.label :dimensions, "Dimensions", class: "sr-only control-label" %>
 				    <%= f.text_field :dimensions, class: "form-control input-lg", placeholder: "Dimensions e.g. (3x2)" %>
 				</div>
