Check for ability to create templates before showing button

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -15,7 +15,9 @@
 	<div class="row">
 		<h2 id="welcome-header" class="col-md-4 col-xs-8"> Welcome <%= current_user.first_name %> <%= current_user.last_name %></h2>
 		<div class="col-md-2 col-xs-4">
-			<%= link_to "Upload Template", new_template_path, class: "btn btn-primary" %>
+			<% if can? :create, Template %>
+				<%= link_to "Upload Template", new_template_path, class: "btn btn-primary" %>
+			<% end %>
 		</div>
 	</div>
 
