--- a/app/assets/stylesheets/publication_requests.scss
+++ b/app/assets/stylesheets/publication_requests.scss
@@ -5,3 +5,15 @@
 #chosen-template {
 	text-align: center;
 }
+
+.request-thumb {
+	// display: inline-block;
+	background-color: #F7F7F9;
+	text-align: center;
+}
+
+.request-cell:hover {
+	transform: scale(1.1);
+	box-shadow: 2px 2px 8px 8px rgba(0,0,0,0.4);
+	z-index: 999;
+}
