--- a/app/assets/stylesheets/publication_requests.scss
+++ b/app/assets/stylesheets/publication_requests.scss
@@ -7,9 +7,19 @@
 }
 
 .request-thumb {
-	// display: inline-block;
+	margin: 10px;
 	background-color: #F7F7F9;
 	text-align: center;
+	display: inline-block;
+	position: relative;
+	overflow: hidden;
+	padding: 5px;
+	a {
+		display: inline-block;
+		position: relative;
+		height: 100%;
+		width: 100%;
+	}
 }
 
 .request-cell:hover {
