--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,62 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "bootstrap";
+
+#create-request-btn {
+	font-size: 24px;
+	padding: 5px;
+	display: inline-block;
+	&:hover {
+		background-color: $gray-lighter;
+		cursor: pointer;
+	}
+}
+
+span.rotate {
+	// -moz-transform:rotate(90deg);
+ //    -webkit-transform:rotate(90deg);
+ //    -o-transform:rotate(90deg);
+ //    -ms-transform:rotate(90deg); 
+	// // position: absolute;
+	// animation: rotate 0.5s linear;
+
+	-webkit-transition: 0.3s linear;
+    -moz-transition: 0.3s linear;
+    -o-transition: 0.3s linear;
+    transition: 0.3s linear;
+
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    -o-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+@keyframes rotate {
+	100% { transform: rotate(90deg) }
+}
+
+// #create-request-templates {
+// 	transform: scaleY(0);
+
+// 	&.show {
+// 		-webkit-transition: 0.3s linear;
+// 	    -moz-transition: 0.3s linear;
+// 	    -ms-transition: 0.3s linear;
+// 	    -o-transition: 0.3s linear;
+// 	    transition: 0.3s linear;
+
+// 	    -webkit-transform: scaleY(1);
+// 	    -moz-transform: scaleY(1);
+// 	    -o-transform: scaleY(1);
+// 	    -ms-transform: scaleY(1);
+// 	    transform: scaleY(1);
+// 	}
+// }
+
+#create-request-templates {
+	padding: 10px;
+	background-color: $gray-lighter;
+}
+
