--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "bootstrap";
 
-#create-request-btn {
+#create-request-btn, #view-requests-btn {
 	font-size: 24px;
 	padding: 5px;
 	display: inline-block;
