--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,37 +19,41 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div id="create-request-btn">
-				Submit a Publication Request <span class="glyphicon glyphicon-chevron-right"></span>
-			</div>
+				Submit a Publication Request <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
 
-			<div id="create-request-templates" class="well">
-				<div class="row">
-					<div class="col-md-12">
-						<h3>Choose a template to base your publication request on</h3>
+				<div id="create-request-templates" class="well">
+					<div class="row">
+						<div class="col-md-12">
+							<h3>Choose a template to base your publication request on</h3>
+						</div>
+					</div>
+
+					<div class="wall" id="templates-wall">
+						<div class="col-md-12">
+							<% @templates.each do |template| %>
+								<div class="template-cell">
+									<%= link_to(image_tag(template['image_medium'], class: "img-thumbnail"), new_publication_request_path(:template_id => template['id'])) %>
+								</div>
+							<% end %>
+						</div>
 					</div>
 				</div>
-
-				<div class="wall" id="templates-wall">
-					<div class="col-md-12">
-						<% @templates.each do |template| %>
-							<div class="template-cell">
-								<%= link_to(image_tag(template['image_medium'], class: "img-thumbnail"), new_publication_request_path(:template_id => template['id'])) %>
-							</div>
-						<% end %>
-					</div>
-				</div>
 			</div>
+
+			
 		</div>
 	</div>
 
 	<div class="row">
 		<div class="col-md-12">
 			<div id="view-requests-btn">
-				Current In-Progress Requests<span class="glyphicon glyphicon-chevron-right"></span>
+				Current In-Progress Requests <!--<span class="glyphicon glyphicon-chevron-right"></span> -->
+
+				<div id="current-requests" class="well">
+					<%= render partial: '/publication_requests/index', locals: { requests: @requests } %>
+				</div>
 			</div>
-			<div id="current-requests" class="well">
-				<%= render partial: '/publication_requests/index', locals: { requests: @requests } %>
-			</div>
+			
 		</div>
 	</div>
 
