--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,7 +4,6 @@
 @import "bootstrap";
 
 #create-request-btn, #view-requests-btn {
-	font-size: 24px;
 	padding: 10px;
 	margin: 10px;
 	// display: inline-block;
@@ -14,6 +13,10 @@
 	&:hover {
 		background-color: $gray-lighter;
 		cursor: pointer;
+	}
+
+	.title {
+		font-size: 24px;
 	}
 }
 
