--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -19,7 +19,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div id="create-request-btn">
-				Submit a Publication Request <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
+				<div class="title">Submit a Publication Request</div> <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
 
 				<div id="create-request-templates" class="well">
 					<div class="row">
@@ -47,7 +47,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div id="view-requests-btn">
-				Current In-Progress Requests <!--<span class="glyphicon glyphicon-chevron-right"></span> -->
+				<div class="title">Current In-Progress Requests</div> <!--<span class="glyphicon glyphicon-chevron-right"></span> -->
 
 				<div id="current-requests" class="well">
 					<%= render partial: '/publication_requests/index', locals: { requests: @requests } %>
