--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -30,11 +30,7 @@
 
 					<div class="wall" id="templates-wall">
 						<div class="col-md-12">
-							<% @templates.each do |template| %>
-								<div class="template-cell">
-									<%= link_to(image_tag(template['image_medium'], class: "img-thumbnail"), new_publication_request_path(:template_id => template['id'])) %>
-								</div>
-							<% end %>
+							<%= render partial: '/templates/index', locals: { templates: @templates } %>
 						</div>
 					</div>
 				</div>
