Initial panel layout

--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -1,64 +1,130 @@
+<div class="page-header">
+	<h1><%= @publication_request["event"] %></h1>
+</div>
+
 <div class="row">
 	<div class="col-md-4 col-xs-4" id="chosen-template">
-		<strong>Template for this Request</strong></br>
-		<%= image_tag(@publication_request["template"]["image_large"], class: "img-thumbnail") %>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<h3 class="panel-title">Template for this Request</h3>
+			</div>
+			<div class="panel-body">
+				<%= image_tag(@publication_request["template"]["image_large"], class: "img-thumbnail") %>
+			</div>
+			<div class="panel-footer">
+				<p><%= @publication_request["template"]["name"] %>, <%= @publication_request["template"]["dimensions"] %></p>
+				<% if @publication_request["template"]["url"] %>
+					<pre><%= @publication_request["template"]["url"] %> </pre>
+				<% end %>
+			</div>
+		</div>
 	</div>
+
 	<div class="col-md-8 col-xs-8">
+		
 		<div class="row">
-			<div class="field form-group col-md-6 col-xs-12 %>">
-			    <%= label_tag :event, "Name of the event", class: "control-label" %>
-			    <p> <%= @publication_request["event"] %> </p>
+
+			<div class="col-md-6 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Name of the event</h3>
+					</div>
+				    <div class="panel-body"> <%= @publication_request["event"] %> </div>
+				</div>
 			</div>
-			<div class="field form-group col-md-6 col-xs-12 form-inline">
-			    <%= label_tag :event_date, "Date of the event this is for" %> </br>
-			    <p> <%= @publication_request["event_date"] %> </p>
+
+			<div class="col-md-6 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Date of the event this is for</h3>
+					</div>
+					<div class="panel-body"><%= date_from(@publication_request["event_date"]) %> </div>
+				</div>
+			</div>
+
+		</div>
+
+		<div class="row">
+			<div class="col-md-8 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+			    		<h3 class="panel-title">Description</h3>
+			    	</div>
+			    	<div class="panel-body"><%= @publication_request["description"] %></div>
+			    </div>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="field form-group col-md-8 col-xs-12 %>">
-			    <%= label_tag :description, "Description", class: "control-label" %>
-			    <p> <%= @publication_request["description"] %> </p>
+			<div class="col-md-6 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Dimensions</h3>
+					</div>
+					<div class="panel-body"><%= @publication_request["dimensions"] %></div>
+				</div>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="field form-group col-md-6 col-xs-12 %>">
-			    <%= label_tag :dimensions, "Dimensions", class: "control-label" %>
-			    <p> <%= @publication_request["dimensions"] %> </p>
+			<div class="col-md-6 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Date the rought draft is due</h3>
+					</div>
+					<div class="panel-body"><%= date_from(@publication_request["rough_date"]) %></div>
+				</div>
+			</div>
+
+			<div class="col-md-6 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Date the final version is due</h3>
+					</div>
+					<div class="panel-body"><%= date_from(@publication_request["due_date"]) %></div>
+				</div>
 			</div>
 		</div>
 
 		<div class="row">
-			<div class="field form-group col-md-6 col-xs-12 form-inline">
-			    <%= label_tag :rough_date, "Date the rough draft is due" %> </br>
-			    <p> <%= @publication_request["rough_date"] %> </p>
+			<div class="col-md-4 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Admin for this request</h3>
+					</div>
+					<div class="panel-body">
+						<%= "#{@publication_request['admin']['first_name']} #{@publication_request['admin']['last_name']}" %>
+					</div>
+				</div>
 			</div>
 
-			<div class="field form-group col-md-6 col-xs-12 form-inline">
-			    <%= label_tag :due_date, "Date the final version is due" %> </br>
-			    <p> <%= @publication_request["due_date"] %> </p>
+			<div class="col-md-4 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Designer for this request</h3>
+					</div>
+					<div class="panel-body">
+						<%= "#{@publication_request['designer']['first_name']} #{@publication_request['designer']['last_name']}" %>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-4 col-xs-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<h3 class="panel-title">Reviewer for this request</h3>
+					</div>
+					<div class="panel-body">
+						<%= "#{@publication_request['reviewer']['first_name']} #{@publication_request['reviewer']['last_name']}" %>
+					</div>
+				</div>
 			</div>
 		</div>
 
-		<div class="row">
-			<div class="field form-group col-md-4 col-xs-12">
-				<%= label_tag :admin_id, "Admin for this request" %> </br>
-				<p> <%= "#{@publication_request['admin']['first_name']} #{@publication_request['admin']['last_name']}" %> </p>
-			</div>
-
-			<div class="field form-group col-md-4 col-xs-12">
-				<%= label_tag :designer_id, "Designer for this request" %> </br>
-				<p> <%= "#{@publication_request['designer']['first_name']} #{@publication_request['designer']['last_name']}" %> </p>
-			</div>
-
-			<div class="field form-group col-md-4 col-xs-12">
-				<%= label_tag :reviewer_id, "Reviewer for this request" %> </br>
-				<p> <%= "#{@publication_request['reviewer']['first_name']} #{@publication_request['reviewer']['last_name']}" %> </p>
-			</div>
-		</div>
 	</div>
 </div>
+
+<hr>
 
 <div class="row comments">
 	<!-- Show comments here -->
