--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.row {
+	margin-left: 0px;
+	margin-right: 0px;
+}
 
 .wall {
 	margin: 15px;
