Disable/enable comment button if there's text in the form

--- a/app/views/publication_requests/show.html.erb
+++ b/app/views/publication_requests/show.html.erb
@@ -83,7 +83,7 @@
 	</div>
 	<div class="row">
 		<div class="col-md-offset-1 col-md-5 col-xs-12">
-			<input class="btn btn-primary" type="submit" value="Comment">
+			<input id="comment-btn" class="btn btn-primary" type="submit" value="Comment" disabled="disabled">
 		</div>
 	</div>
 
