--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   <%= stylesheet_link_tag params[:controller] %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'freewall' %>
+  <%= javascript_include_tag 'jstz.min' %>
+  <%= javascript_include_tag 'rails-timezone.min' %>
   <%= javascript_include_tag params[:controller] %>
   <%= csrf_meta_tags %>
 </head>
